# piggy

./: .gitignore  Cargo.toml  DESIGN.md  README.md  stacksaver-build-prompt.md
.claude/: launch.json
app/: index.html  package-lock.json  package.json  vite.config.ts
app/scripts/: build-sidecar.mjs  screenshots.mjs
app/src/: App.tsx  index.css  ipc.ts  main.tsx  mock.ts  store.ts  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: backend.rs  commands.rs  lib.rs  main.rs  tray.rs
app/src/components/: Badge.tsx  Banner.tsx  CopyCmd.tsx  Header.tsx  PiggyMark.tsx  SaverConfig.tsx  SaverIcon.tsx  Sidebar.tsx  SourceGrid.tsx  StatusChip.tsx  StreamBars.tsx  Switch.tsx  Tabs.tsx  UsageChart.tsx  saverMeta.ts
app/src/lib/: badge.test.ts  badge.ts  errors.test.ts  errors.ts  format.ts  sharecard-canvas.ts  sharecard.test.ts  sharecard.ts  usage.test.ts  usage.ts
app/src/screens/: Dashboard.tsx  Discover.tsx  EmptyStates.tsx  Home.tsx  Overview.tsx  Proof.tsx  Reports.tsx  Savers.tsx  Settings.tsx  ShareSheet.tsx  SweepSheet.tsx
crates/piggy-cli/: Cargo.toml
crates/piggy-cli/src/: main.rs
crates/piggy-core/: Cargo.toml
crates/piggy-core/data/: pricing.json
crates/piggy-core/src/: attribution.rs  cli_link.rs  codex.rs  config.rs  discovery.rs  engine.rs  index.rs  lib.rs  parser.rs  pricing.rs  registry.rs  rng.rs  rotation.rs  saver_config.rs  settings.rs  sources.rs  state.rs  stats.rs  store.rs  sweep.rs  tagging.rs  watcher.rs
crates/piggy-core/tests/: cli_link_tests.rs  daily_series_tests.rs  hostile_tests.rs  m2_engine_tests.rs  m3_attribution_tests.rs  m3_watcher_rotation_tests.rs  multi_source_tests.rs  parser_tests.rs  registry_tests.rs  saver_config_tests.rs  settings_tests.rs  stats_attack_tests.rs  store_tests.rs
crates/piggy-core/tests/fixtures/: basic.jsonl  github_search.json  synthetic.jsonl  truncated.jsonl
crates/piggy-core/tests/fixtures/settings/: bom.json  hostile.json  openbar.json  unknown-keys.json
crates/piggy-core/tests/fixtures/shims/: claude-shim.sh  python-shim.sh
docs/: m2-spec.md  m4-spec.md  measurement.md  releasing.md
docs/mockups/: panel.html  sharecard.html
docs/research/: optimizers.md
installer/: README.md  cli.js  lib.js  package.json
installer/test/: lib.test.js
installer/test/fixtures/: checksums.txt  hdiutil-attach-output.txt  release-multi-arch.json  release-no-checksums.json  release-no-dmg.json  release-single-dmg.json
registry/: catalog.json
scripts/: verify-against-jq.sh
