[package]
name = "piggy-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Piggy — the token piggy bank for Claude Code (menu bar app)."

[lib]
# The desktop/mobile entry point lives in the lib so `main.rs` is a thin shim.
name = "piggy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "piggy-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
piggy-core = { path = "../../crates/piggy-core" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.5"

# Autostart and the updater are desktop-only.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[features]
# This feature is used to produce the Tauri app bundle metadata.
custom-protocol = ["tauri/custom-protocol"]
